service-pgadmin.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin-service
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 5000
      nodePort: 30080  # Choisissez un port disponible
  selector:
    app: pgadmin
